--- a/create-instance-gcp.yml
+++ b/create-instance-gcp.yml
@@ -26,7 +26,7 @@
     - name: create an IPv4 public IP Address
       gcp_compute_address:
         name: address-instance
-        region: us-central1
+        region: asia-southeast2
         project: "{{ gcp_project }}"
         auth_kind: "{{ gcp_cred_kind }}"
         state: present
