--- a/delete-gcp-instance.yml
+++ b/delete-gcp-instance.yml
@@ -1,5 +1,5 @@
 - name: Housekeeping GCP instance
-  hosts: all
+  hosts: localhost
   vars:
      gcp_project: ansible-demo-ict
      gcp_cred_kind: serviceaccount
