--- a/create-gcp-instance-v2.yml
+++ b/create-gcp-instance-v2.yml
@@ -2,7 +2,7 @@
   hosts: localhost
   gather_facts: no
   vars:
-      gcp_project: my-project
+      gcp_project: ansible-demo-ict
       gcp_cred_kind: serviceaccount
       zone: "asia-southeast2-a"
       region: "asia-southeast2"
