--- a/create-gcp-instance-v2.yml
+++ b/create-gcp-instance-v2.yml
@@ -48,3 +48,11 @@
 
    - name: Wait for SSH to come up
      wait_for: host={{ address.address }} port=22 delay=10 timeout=60
+   
+   - name: Create Firewall HTTP Allow
+     community.general.gce_net:
+       name: default
+       fwname: "Allow HTTP"
+       allowed: tcp:80
+       state: "present"
+       src_range: ['0.0.0.0/0']
