--- a/create-gcp-instance-v2.yml
+++ b/create-gcp-instance-v2.yml
@@ -2,7 +2,7 @@
   hosts: localhost
   gather_facts: no
   vars:
-      gcp_project: cool-oarlock-293009
+      gcp_project: enhanced-cable-281809
       gcp_cred_kind: serviceaccount
       zone: "asia-southeast2-a"
       region: "asia-southeast2"
